kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weebify
  labels:
    name: weebify
    app: weebify
