kubernetes/media.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  namespace: weebify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
        - name: media
          image: ghcr.io/serial-experiments-weebify/weebify-media:devops-8f75d48
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: media
  namespace: weebify
spec:
  selector:
    app: media
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
